[tool.poetry]
name = "hkstreets"
version = "0.1.0"
description = ""
authors = ["Diana Pang", "Mart van de Ven <m@type.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
notebook = "^6.5.4"
jupyterlab = "^4.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
